# posX

./: .gitignore  README.md  pyproject.toml
app/core/Interfaces/: campaign_discount_calculator_interface.py  campaign_interface.py  campaign_repository_interface.py  discount_handler.py  product_interface.py  product_repository_interface.py  receipt_interface.py  receipt_repository_interface.py  repository.py  shift_interface.py  shift_repository_interface.py
app/core/classes/: campaign_discount_calculator.py  campaign_service.py  errors.py  exchange_rate_service.py  percentage_discount.py  product_service.py  receipt_service.py  shift_service.py
app/infra/: campaign_in_memory_repository.py  campaign_sql_repository.py  in_memory.py  product_in_memory_repository.py  product_sql_repository.py  receipt_in_memory_repository.py  repository_factory.py  shift_in_memory_repository.py  shift_sql_repository.py  sqlite.py
app/infra/api/: campaigns.py  products.py  receipts.py  shifts.py
app/infra/in_memory_repositories/: campaign_in_memory_repository.py  product_in_memory_repository.py  receipt_in_memory_repository.py  shift_in_memory_repository.py
app/infra/sql_repositories/: campaign_sql_repository.py  product_sql_repository.py  receipt_sql_repository.py  shift_sql_repository.py
app/runner/: __main__.py  setup.py
tests/test_api/: test_campaigns_api.py  test_products_api.py  test_receipts_api.py  test_shifts_api.py
tests/test_campaigns/: test_campaign.py
tests/test_in_memory_repository/: test_campaign.py  test_product.py  test_receipt.py  test_shift.py
tests/test_products/: test_product.py  test_receipt.py
tests/test_shifts/: test_shift.py
tests/test_sql_repositories/: test_campaigns.py  test_campaigns_sql.py  test_products.py  test_products_sql.py  test_receipt_sql.py  test_shifts_sql.py
